src/components/DemoPage/DemoPage.less
.demo-page {
  display: flex;
}

.demo-page__filter-sidebar {
  background: #fff;
  border-right: 1px solid #eee;
  height: 100vh;
  left: 0;
  position: fixed;
  top: 0;
  width: 300px;
  z-index: 9999;
}

.demo-page__primary-btn {
  align-items: center;
  appearance: none;
  background-color: #e70 !important;
  border-radius: 0;
  box-shadow: none !important;
  border: none;
  color: #fff;
  display: inline-flex;
  flex: 1;
  font-size: 12px;
  font-weight: bold;
  overflow: visible;
  padding: 6px 12px;
  position: relative;
  text-transform: uppercase;
  &:focus {
    outline: none;
  }
  &:hover {
    background-color: #ffaa55 !important;
    cursor: pointer;
  }
}

.demo-page__main-menu-container-group {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.demo-page__main-menu-sidebar-button {
  margin-right: 12px;
}

.demo-page__max-container-width-slider-group {
  display: flex;
  align-items: flex-end;
  line-height: 1;
  justify-content: space-between;
}

.demo-page__max-container-width-slider-group-title {
  font-weight: bold;
}

.demo-page__max-container-width-slider-group-title {
  display: inline-flex;
  margin-right: 8px;
}

.demo-page__max-container-width-slider-group-value {
  display: inline-flex;
  width: 2.4em;
  justify-content: flex-start;
  margin-left: 6px;
}

.demo-page__max-container-width-slider {
  width: 200px;
  max-width: 56%;
  height: 12px;
  background: #ddd;
  position: relative;
  &:hover {
    cursor: pointer;
    & .rc-slider-track {
      background-color: #ffaa55;
    }
  }
  & .rc-slider-mark {
    height: 100%;
    position: absolute;
    width: 100%;
    top: 0;
    background: transparent;
    z-index: 10;
  }

  & .rc-slider-track {
    background-color: #e70;
    height: 100%;
  }
}

.demo-page__options-item-btn {
  display: inline-flex;
  justify-content: center;
  margin-right: 12px;
  align-items: flex-end;
  color: #aaa;
  height: 22px;
  font-size: 12px;
  font-weight: bold;
  cursor: pointer;
  line-height: 1.4;
  &:hover {
    text-decoration: underline;
    color: #e70;
  }
}

.demo-page__options-item-btn--active {
  color: #e70;
}

.demo-page__main-menu-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.demo-page__main-menu-container-bottom-hr {
  margin-top: 12px;
}

